# rustyletter

./: .env  Cargo.toml  config.yaml
migrations/: 20220220135426_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
